--- a/templates/home.html
+++ b/templates/home.html
@@ -13,19 +13,22 @@
             background: url("/static/bg.jpg") no-repeat center center fixed;
             background-size: cover;
         }
-        header {
-            background: rgba(0, 0, 0, 0.7);
-            padding: 20px;
-            font-size: 2em;
-            font-weight: bold;
+        h1 {
+            margin-top: 20%;
+            font-size: 3em;
             text-shadow: 2px 2px 5px black;
-            border-bottom: 3px solid gold;
+        }
+        a {
+            display: block;
+            margin-top: 20px;
+            color: yellow;
+            text-decoration: none;
+            font-weight: bold;
         }
     </style>
 </head>
 <body>
-    <header>
-        Welcome to ACEest Fitness & Gym
-    </header>
+    <h1>Welcome {{ username }} to ACEest Fitness & Gym</h1>
+    <a href="{{ url_for('logout') }}">Logout</a>
 </body>
 </html>
